--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,6 +13,12 @@ section {
 	float: left;
     margin: 10px;
     width: 150px;
-    height: 200px;
+    height: 100px;
     border: 1px solid black;
+}
+.stat {
+	font-size: small;
+    margin: 4px;
+    padding: 0;
+    line-height: 10px;
 }
