--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,21 +4,57 @@ body {
     line-height: 30px;
 }
 section {
-	display: block;
-    clear: both;
-    width: 100%;
     background-color: lavender;
+	float: left;
+	text-align: center;
+}
+footer {
+	clear: both;
+	width: 100%;
+	text-align: center;
+	font-size: smaller;
+	position: absolute;
+    bottom: 40px;
+}
+#enemies {
+	width: 20%;
+	height: 600px;
+}
+#hero {
+	width: 35%;
+	height: 300px;
+}
+#opponent {
+	width: 35%;
+	float: right;
+	height: 300px;
+}
+#controls {
+	width: 10%;
 }
 .character {
-	float: left;
-    margin: 10px;
+    margin: 10px auto;
     width: 150px;
     height: 100px;
     border: 1px solid black;
+}
+#enemies .character {
+    width: 75px;
+    height: 50px;
+    line-height: 20px;
+}
+#enemies .character .stats {
+	display: none;
 }
 .stat {
 	font-size: small;
     margin: 4px;
     padding: 0;
     line-height: 10px;
+}
+#attack {
+	display: none;
+}
+#newGame {
+	display: none;
 }
