--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,7 +39,7 @@ footer {
     border: 0px;
 }
 #message {
-	width: 605px;
+	width: 74%;
 	height: 140px;
     padding: 10px;
     box-sizing: border-box;
