--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -58,12 +58,14 @@ footer {
 #enemies .character .portrait {
     position: relative;
     left: -30px;
-    top: -15px;
+    top: -24px;
 }
 #enemies .character {
     width: 75px;
     height: 50px;
     line-height: 20px;
+    float: left;
+    margin: 8px;
 }
 #enemies .character .stats {
 	display: none;
