--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,11 +2,14 @@ body {
 	padding: 30px;
     font-size: 18px;
     line-height: 30px;
-    background-color: black;
     font-family: 'Bitter', 'Times New Roman', serif;
+    background-color: black;
+    background-image: url('../images/Mark_Evans_tourney.jpg');
+    background-size: cover;
 }
 h1 {
     color: red;
+    text-shadow: black -2px 4px 4px;
     font-size: 68px;
     margin-bottom: 10px;
     font-family: 'Quintessential', cursive;
@@ -26,16 +29,30 @@ section {
 	text-align: center;
 }
 footer {
-	clear: both;
-	width: 100%;
-	text-align: center;
-	font-size: smaller;
-	position: absolute;
-    bottom: 40px;
+    font-size: 0.65em;
+    line-height: 1.2em;
+    position: absolute;
+    bottom: 15px;
+    color: #666;
 }
 #enemies {
-	width: 20%;
+	width: 191px;
 	height: 600px;
+}
+#enemies .character .portrait {
+    position: relative;
+    left: -30px;
+    top: -24px;
+}
+#enemies .character {
+    width: 68px;
+    height: 50px;
+    line-height: 20px;
+    float: left;
+    margin: 8px;
+}
+#enemies .character .stats {
+    display: none;
 }
 #hero {
 	width: 35%;
@@ -57,10 +74,22 @@ footer {
 	width: 74%;
 	height: 140px;
     padding: 10px;
+    position: relative;
     box-sizing: border-box;
     font-size: larger;
     background-color: #aaa;
     color: #4a1717;
+}
+#message.winMsg {
+    background-color: green;
+    color: white;
+}
+#message.loseMsg {
+    background-color: red;
+    color: white;
+}
+#message.gameOverMsg {
+    background-color: black;
 }
 .character {
     position: relative;
@@ -75,21 +104,6 @@ footer {
     line-height: 16px;
     font-weight: bold;
 }
-#enemies .character .portrait {
-    position: relative;
-    left: -30px;
-    top: -24px;
-}
-#enemies .character {
-    width: 68px;
-    height: 50px;
-    line-height: 20px;
-    float: left;
-    margin: 8px;
-}
-#enemies .character .stats {
-	display: none;
-}
 .stat {
 	font-size: small;
     font-weight: lighter;
@@ -103,17 +117,6 @@ footer {
 #newGame {
 	display: none;
 }
-#message.winMsg {
-    background-color: green;
-    color: white;
-}
-#message.loseMsg {
-    background-color: red;
-    color: white;
-}
-#message.gameOverMsg {
-    background-color: black;
-}
 /* responsive styles! */
 @media screen and (max-width: 1015px) {
     #enemies .character {
@@ -124,6 +127,7 @@ footer {
     }
    #enemies {
         height: auto;
+        width: 138px;
     }
 }
 @media screen and (max-width: 810px) {
@@ -152,11 +156,6 @@ footer {
     #message {
         width: 100%;
     }
-    footer {
-        position: relative;
-        top: -40px;
-        color: #666;
-    }
 }
 @media screen and (max-width: 505px) {
     h1 {
@@ -166,11 +165,10 @@ footer {
         float: inherit;
     } 
     #enemies {
-        top: 840px;
+        top: 870px;
     }
     footer {
-        font-size: small;
-        top: -51px;
+        font-size: 12px;
     }
     #controls {
         position: static;
